logo added in subheader and installed app alignment fixed

--- a/app/assets/themes/empty/stylesheets/style.css.scss
+++ b/app/assets/themes/empty/stylesheets/style.css.scss
@@ -52,3 +52,6 @@ body {
 .table {
     margin-top: 20px;
 }
+.btn {
+    margin-bottom: 10px;
+}
